Update readiness output and improve test fixtures to not cause sticky dependency changes in following tests
